--- a/bergen/Bergen.html
+++ b/bergen/Bergen.html
@@ -14,21 +14,21 @@
 
     <div class="header">
       <div>
-        <img src="images/fløien.jpg" alt="fløibanen" id="avatar" />
+        <img src="fløien.jpg" alt="fløibanen" id="avatar" />
         <h3>Take fløibanen to the top</h3>
       </div>
       <div>
-        <img src="images/inside.jpg" alt="burger" id="avatar1" />
+        <img src="inside.jpg" alt="burger" id="avatar1" />
         <h4>Eat a delicious burger at INISDE</h4>
       </div>
       <div>
-        <img src="images/trekroneren.jpg" alt="pølse" id="avatar2" />
+        <img src="trekroneren.jpg" alt="pølse" id="avatar2" />
         <h5>Enjoy a delicious hot dogs</h5>
       </div>
     </div>
 
     <div class="card">
-      <img src="images/pingvin.jpg" alt="Wolf" class="ping" />
+      <img src="pingvin.jpg" alt="Wolf" class="ping" />
       <div>
         <h3>Guide</h3>
         <p>Nils olav</p>
